name:                package2
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     DuplicateModuleName
  build-depends:       base >= 4.3 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
